--- a/WhoIsMorePopular.WebApp/WhoIsMorePopular.WebApp.csproj
+++ b/WhoIsMorePopular.WebApp/WhoIsMorePopular.WebApp.csproj
@@ -11,7 +11,7 @@
 
     <ItemGroup>
         <PackageReference Include="Akka" Version="1.4.27" />
-        <PackageReference Include="Microsoft.AspNet.SignalR.Core" Version="2.4.2" />
+        <PackageReference Include="Akka.Remote" Version="1.4.27" />
         <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.11" />
     </ItemGroup>
 
@@ -23,14 +23,13 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Actors" />
-      <Folder Include="ClientApp\src\components\Score" />
-      <Folder Include="ClientApp\src\components\Searcher" />
-      <Folder Include="ClientApp\src\components\Winner" />
+      <ProjectReference Include="..\WhoIsMorePopular.Common\WhoIsMorePopular.Common.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\WhoIsMorePopular.Shared\WhoIsMorePopular.Shared.csproj" />
+      <None Update="akka.net.hocon">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
