Remove unused files

--- a/WhoIsMorePopular.WebApp/appsettings.Development.json
+++ b/WhoIsMorePopular.WebApp/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "BingSettings": {
+    "Url": "https://www.bing.com/search"
+  },
+  "GoogleSettings": {
+    "Url": "https://www.googleapis.com/customsearch/v1",
+    "ApiKey": "AIzaSyCEPkGqZEL6yOS_M3wnOvyFOT3QmGlXhJ8"
   }
 }
