--- a/WhoIsMorePopular.WebApp/WhoIsMorePopular.WebApp.csproj
+++ b/WhoIsMorePopular.WebApp/WhoIsMorePopular.WebApp.csproj
@@ -12,6 +12,7 @@
     <ItemGroup>
         <PackageReference Include="Akka" Version="1.4.27" />
         <PackageReference Include="Akka.Remote" Version="1.4.27" />
+        <PackageReference Include="Microsoft.AspNet.SignalR.Core" Version="2.4.2" />
         <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.11" />
     </ItemGroup>
 
