--- a/WhoIsMorePopular.WebApp/appsettings.json
+++ b/WhoIsMorePopular.WebApp/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+"AllowedHosts": "*",
+  "BingSettings": {
+    "Url": "https://www.bing.com/search"
+  },
+  "GoogleSettings": {
+    "Url": "https://www.googleapis.com/customsearch/v1",
+    "ApiKey": "AIzaSyCEPkGqZEL6yOS_M3wnOvyFOT3QmGlXhJ8"
+  }
 }
